fab icon removed, wifi and battery icon added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Comfort Sensing</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_battery_status">BatteryStatus</string>
+    <string name="title_activity_wifi_status">WifiStatus</string>
+    <string name="title_activity_personal_data">PersonalData</string>
 </resources>
